cargo-features = ["strip"]

[package]
name = "tft-teamcomp-optimizer"
version = "0.1.3"
authors = ["Andre Vallestero <andrevallestero@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.132", default-features=false, features = ["derive"] }
ureq = { version="2.3.1", default-features=false, features=["tls"] }
rayon = { version="1.5.1", default-features=false }
serde_json = { version="1.0.73", default-features=false, features=["std"]}

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
panic = "abort"
strip = true